--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -15,6 +15,9 @@ header.masthead {
   p {
     font-weight: 300;
   }
+  i:hover {
+    color: darken($primary, 15%);
+  }
   @media (min-width: 768px) {
     p {
       font-size: 1.15rem;
@@ -28,17 +31,16 @@ header.masthead {
     h1 {
       font-size: 3rem;
     }
+    i {
+      margin-left: .3rem;
+    }
   }
   @media (min-width: 1200px) {
     h1 {
       font-size: 4rem;
     }
+    i {
+      margin-left: .3rem;
+    }
   }
-}
-
-.social-icon {
-  margin-left: 1rem;
-}
-.social-icon:hover {
-  color: lighten($primary, 10%);
 }
